# tinytensor_jit

./: CMakeLists.txt
examples/: CMakeLists.txt  test_jit_ir.cpp
include/tt/: tensor.h
include/tt/jit/: Compiler.h  Ops.h  Visitor.h
tinytensor/: CMakeLists.txt
tinytensor/jit/: Compiler.cpp
tinytensor/tensor/: backend_base.h  backend_register.cpp  tensor.cpp
tinytensor/tensor/backend/jit/: JITGraphBuilder.cpp  JITGraphBuilder.h
